force-app/main/default/objects/Staff__c/Staff__c.object-meta.xml
<CustomObject>
    <label>Staff</label>
    <nameField>
        <displayFormat>STF{00000}</displayFormat>
        <label>Staff #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staffs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>